# nflows

./: .gitignore  README.md  glow.ipynb  glow.py  pyproject.toml
nflows/: datasets.py  flows.py  train.py
nflows/data/: __init__.py  bubbles.py  ocean.py
nflows/models/: __init__.py  glow.py
notebooks/: datamaker.ipynb  inspect.ipynb
